Time: 143 ms (15.91%), Space: 247.1 MB (7.57%) - LeetHub